# ungrammar-extra-crates

./: .gitignore  Cargo.toml  rustfmt.toml
ungrammar-extra/: Cargo.toml
ungrammar-extra-derive/: Cargo.toml
ungrammar-extra-derive/src/: attribute.rs  derive_enum.rs  into_kind_impl.rs  lib.rs
ungrammar-extra-derive/tests/: derive.rs  mod.rs
ungrammar-extra-derive/tests/with_lexers/: logos.rs
ungrammar-extra/src/: lib.rs
ungrammar-extra/tests/: kind.rs
ungrammar-gen/: .gitignore  Cargo.toml  README.md
ungrammar-gen-tests/: .gitignore  Cargo.toml  build.rs
ungrammar-gen-tests/_data_/: calculator.ungram
ungrammar-gen-tests/src/: lib.rs
ungrammar-gen-tests/src/generator/: calculator.rs  mod.rs
ungrammar-gen-tests/src/generator_new/: mod.rs
ungrammar-gen/docs/: howto.md  resources.md
ungrammar-gen/src/: lib.rs  main.rs
ungrammar-gen/src/generator/: ast.rs  blanket_impls.rs  gen.rs  mod.rs  nodes.rs
ungrammar-gen/src/generator/utils/: format.rs  io.rs  lint.rs  mod.rs
ungrammar-gen/src/generator_new/: mod.rs
ungrammar-gen/tests/: mod.rs
ungrammar-gen/tests/_data_/: calculator.ungram
ungrammar-gen/tests/_temp_/generator/calculator/: ast.rs  blanket_impls.rs  kind.rs  mod.rs  token.rs
ungrammar-gen/tests/generator/: calculator.rs
ungrammar-gen/tests/generator_new/: mod.rs
