[package]
name = "ungrammar-gen-tests"
version = "0.1.0"
edition = "2021"



[dependencies]
ungrammar-gen = { path="../ungrammar-gen" }
ungrammar-extra = { path="../ungrammar-extra" }
ungrammar-extra-derive = { path="../ungrammar-extra-derive" }


#diagnostics = "0.1.0"
cstree = { version = "0.12", features = ["derive", "multi_threaded_interning"] }
lasso = { version = "0.7", features = ["multi-threaded", "ahasher"] }
once_cell = "1.19.0"

[dev-dependencies.text]
git = "https://github.com/SparkyPotato/yam"
rev = "ff948ab"

[dev-dependencies.diagnostics]
git = "https://github.com/SparkyPotato/yam"
rev = "ff948ab"
